# lvgl_demo

./: .gitignore  CMakeLists.txt  README.md
applications/: main.c
applications/benchmark/: lv_demo_benchmark.c
applications/benchmark/assets/: img_cogwheel_alpha16.c  img_cogwheel_argb.c  img_cogwheel_chroma_keyed.c  img_cogwheel_indexed16.c  img_cogwheel_rgb.c
applications/music/: lv_demo_music.c
drivers/: board.c  drv_clk.c  drv_lcd.c  drv_sdram.c
drivers/include/: board.h  drv_common.h
drivers/include/config/: stm32f4xx_hal_conf.h
libraries/CMSIS/Device/ST/STM32F4xx/Source/Templates/gcc/: startup_stm32f429xx.s
libraries/STM32F4xx_HAL_Driver/: CMakeLists.txt
linkscripts/STM32F429IG/: link.lds
ports/: lcd_port.h  sdram_port.h  touch_port.c
ports/lvgl/: lv_music.c  lv_port_disp.c  lv_port_indev.c  lv_port_indev.h
rt-thread/: CMakeLists.txt  rtconfig.h
rt-thread/components/drivers/touch/: touch.h
rt-thread/src/: memheap.c
